cluster/apps/example/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: example
  labels:
    app.kubernetes.io/name: example
    app.kubernetes.io/part-of: cvp
spec:
  selector:
    app.kubernetes.io/name: example
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  type: ClusterIP
